# SudokuSolver

./: .gitignore  .gitmodules  README.md  build.sh  cell.py  core_wrapper.py  errors.py  main.py  solvers.py  sudoku.py  test.py
core/src/: CMakeLists.txt  SolverConfig.h  branchingsolver.cpp  branchingsolver.h  cell.cpp  cell.h  common.h  python_bindings.cpp  recursivesolver.cpp  recursivesolver.h  singlessolver.cpp  singlessolver.h  solver.cpp  solver.h  sudoku.cpp  sudoku.h
data/: 1.sdk  3.sdk
scripts/: branching-2.py  branching.py  manipulating.py  simplest.py  trying-multiple-solvers.py
source/: CMakeLists.txt  SolverConfig.h  branchingsolver.cpp  branchingsolver.h  cell.cpp  common.h  exceptions.h  hiddensinglessolver.cpp  hiddensinglessolver.h  nakedsinglessolver.cpp  nakedsinglessolver.h  python_bindings.cpp  recursivesolver.cpp  singlessolver.cpp  singlessolver.h  solver.cpp  solver.h  sudoku.cpp  sudoku.h
sudokus/: 2.sdk
tests/: support.py  tests.py
